--- a/app/src/main/res/layout/telefonespalmas.xml
+++ b/app/src/main/res/layout/telefonespalmas.xml
@@ -10,17 +10,17 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/nome_local"
+            android:id="@+id/nome_telefone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/telefone_local"
+            android:id="@+id/telefone_telefone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/descricao_local"
+            android:id="@+id/descricao_telefone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
